@@ -24,6 +24,11 @@
 2009-06-16  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> configure.ac: Reduce usage of deprecated Autoconf macros.
+
+  <LI> coders/jpeg.c (ReadJPEGImage): Set image orientation from EXIF
+        Orientation tag if it is present.
+
   <LI> www/formats.rst: Add TopoL format as per Jaroslav Fojtik.
 
 </UL>
